--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/estilo.css', type='text/css', id='cssRef')
   body
     block content
+    script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js')
+    script(src='javascripts/js.js')
